WRP-2108 attempted a fix on this issue related to the modal body causing the header to overlap (realized it was screen resolution related) WRP-2100 - added in the drag handle that was removed in error

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -5,6 +5,12 @@
 	display:block;width: 100%;
 	
 }
+.modal-footer {
+  
+	float:left;
+	display:block;width: 100%;
+	
+}
 html {
     height: 100%;
 	width:100%;
